# youtube-notes-ai

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/youtube_notes_ai/: __init__.py  models.py  notes_formatter.py  notes_service.py  summarizer.py  transcript_service.py  transcription_fallback.py  youtube_parser.py
tests/: test_notes_formatter.py  test_youtube_parser.py
